# expe_c

./: README.md
check_audio_visual_timing/: GPATH  GRTAGS  GTAGS  Makefile  Makefile.am  Makefile.in  README  check-audio-visual-timing_0.0.1-1_all.deb  check_audio_visual_asynchrony  check_audio_visual_asynchrony.c  check_audio_visual_asynchrony.c~  check_audio_visual_asynchrony_nividia.sh  check_audio_visual_timing  check_audio_visual_timing.c  config.h  config.h.in  config.status  configure  configure.ac  configure.scan  playwav_withsdl2.c  tearing_test  tearing_test.c
check_audio_visual_timing/.deps/: check_audio_visual_timing.Po
check_audio_visual_timing/autom4te.cache/: output.0  output.1  output.3  requests  traces.0  traces.1  traces.2  traces.3
display_sequence_of_images/: .RData  .Rhistory  Makefile  Makefile.bak  aga.txt  all.txt  check_timing_latencies  check_timing_latencies.c  pics.csv  streaming3.c  streaming4.c  vstims.c
display_sequence_of_images/images/: onsets.csv
psychexp/: Makefile  Makefile.am  Makefile.in  Makefile.standalone  README  config.h  config.h.in  config.status  configure  configure.ac  libtool  ltmain.sh  psychexp.c
psychexp/autom4te.cache/: output.0  output.1  output.2  output.3  output.4  requests  traces.0  traces.1  traces.2  traces.3  traces.4  traces.5
psychexp/lib/: Makefile  Makefile.am  Makefile.in  libpsychexp.la  psychexp.c  psychexp.h  psychexp.lo
psychexp/lib/.deps/: psychexp.Plo
psychexp/lib/.libs/: libpsychexp.la  libpsychexp.lai  libpsychexp.so.0.0.0
psychexp/m4/: libtool.m4  ltoptions.m4  ltsugar.m4  ltversion.m4  lt~obsolete.m4
psychexp/test/: Makefile  test_psychexp
tearing-test/: tearing-test  tearing-test.c~
tearing_test/: tearing_test.c
tearing_test/tearing_test_SDL/: tearing-test.c
test_glib/: test_glib_list.c  test_gtk.c
tests/count_words/: Makefile  aga.txt  count_tokens  count_tokens.c  tokenize  tokenize.c
tests/descriptive_stats/: Makefile  README.md  a.out  census  census.c  multiplication_tables  multiplication_tables.c  rep.c  runs.db  simul  simul.c  statistics.c  statistics.h  stats  stats.c  vector.c  vector.h  welsh.c
(+29 files in other folders)
