#bin_PROGRAMS = check_audio_visual_timing check_audio_visual_timing_static
bin_PROGRAMS = check_audio_visual_timing
check_audio_visual_timing_SOURCES = check_audio_visual_timing.c
check_audio_visual_timing_LDADD = -lpsychexp -lSLD2

# Create a statically linked version of check_audio_visual_timing.
#check_audio_visual_timing_static_SOURCES = check_audio_visual_timing.c
#check_audio_visual_timing_static_LDADD = -lpsychexp -lSDL2
#check_audio_visual_timing_static_LDFLAGS = -static
